objects/SVMXC__Sync_Request_Records__c.object
<CustomObject>
    <description>Record level information specific to the request made by mobile device during synchronization is stored in this object. The data in this object is removed once the request get completed.</description>
    <fields>
        <fullName>SVMXC__Client_Record_Id__c</fullName>
        <label>Client Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Iteration_Index__c</fullName>
        <label>Iteration Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Operation_Type__c</fullName>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Upsert</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SFDC_Record_Id__c</fullName>
        <label>SFDC Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Sync_Request__c</fullName>
        <label>Sync Request</label>
        <referenceTo>SVMXC__Sync_Request__c</referenceTo>
        <relationshipLabel>Sync Request Id</relationshipLabel>
        <relationshipName>Sync_Request_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sync Request Record</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Request Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>